Fix kamehameha charge in floor while mooving

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                     {
                         k++;
                     }
-                    if(y <= 0)
+                    if(y <= 0 && !left && !right)
                     {
                         goku.src = 'perso/'+position+'goku/'+etat+'kamehamehachargement.png';
                         if(k < 30)
