First personnage creation

--- a/index.html
+++ b/index.html
@@ -99,5 +99,7 @@
         <div id="fight"></div>
         <div id="c">fb: Hidekela</div>
     </body>
-    <script src="game.js"></script>
+    <script src="controller.js"></script>
+    <script src="personnage.js"></script>
+    <script src="index.js"></script>
 </html>
