--- a/index.html
+++ b/index.html
@@ -69,8 +69,145 @@
         <div id="barre_d_energie_jiren">
             <div id="energie_restant_jiren"></div>
         </div>
-        <img id="goku" src="perso/gauchegoku/initial.png" alt=""/>
-        <img id="jiren" src="perso/droitejiren/initial.png" alt=""/>
+        <div id="goku">
+            <img style="display: inline;" id="gokugaucheinitial" src="perso/gauchegoku/initial.png" alt=""/>
+            <img id="gokugaucheblue" src="perso/gauchegoku/blue.png" alt=""/>
+            <img id="gokugaucheblueairkamehamehachargement" src="perso/gauchegoku/blueairkamehamehachargement.png" alt=""/>
+            <img id="gokugaucheblueairpouvoir" src="perso/gauchegoku/blueairpouvoir.png" alt=""/>
+            <img id="gokugaucheblueairtransformation" src="perso/gauchegoku/blueairtransformation.png" alt=""/>
+            <img id="gokugaucheblueavance" src="perso/gauchegoku/blueavance.png" alt=""/>
+            <img id="gokugauchebluedaka1" src="perso/gauchegoku/bluedaka1.png" alt=""/>
+            <img id="gokugauchebluedaka2" src="perso/gauchegoku/bluedaka2.png" alt=""/>
+            <img id="gokugauchebluedaka3" src="perso/gauchegoku/bluedaka3.png" alt=""/>
+            <img id="gokugauchebluedescend" src="perso/gauchegoku/bluedescend.png" alt=""/>
+            <img id="gokugauchebluekamehameha" src="perso/gauchegoku/bluekamehameha.png" alt=""/>
+            <img id="gokugauchebluekamehamehachargement" src="perso/gauchegoku/bluekamehamehachargement.png" alt=""/>
+            <img id="gokugauchebluemonte" src="perso/gauchegoku/bluemonte.png" alt=""/>
+            <img id="gokugauchebluepouvoir" src="perso/gauchegoku/bluepouvoir.png" alt=""/>
+            <img id="gokugaucheblueretour" src="perso/gauchegoku/blueretour.png" alt=""/>
+            <img id="gokugauchebluetotondry1" src="perso/gauchegoku/bluetotondry1.png" alt=""/>
+            <img id="gokugauchebluetotondry2" src="perso/gauchegoku/bluetotondry2.png" alt=""/>
+            <img id="gokugauchebluetouchedmiddle" src="perso/gauchegoku/bluetouchedmiddle.png" alt=""/>
+            <img id="gokugauchebluetouchedtop" src="perso/gauchegoku/bluetouchedtop.png" alt=""/>
+            <img id="gokugauchebluetransformation" src="perso/gauchegoku/bluetransformation.png" alt=""/>
+            <img id="gokugauchegod" src="perso/gauchegoku/god.png" alt=""/>
+            <img id="gokugauchegodairkamehamehachargement" src="perso/gauchegoku/godairkamehamehachargement.png" alt=""/>
+            <img id="gokugauchegodairpouvoir" src="perso/gauchegoku/godairpouvoir.png" alt=""/>
+            <img id="gokugauchegodairtransformation" src="perso/gauchegoku/godairtransformation.png" alt=""/>
+            <img id="gokugauchegodavance" src="perso/gauchegoku/godavance.png" alt=""/>
+            <img id="gokugauchegoddaka1" src="perso/gauchegoku/goddaka1.png" alt=""/>
+            <img id="gokugauchegoddaka2" src="perso/gauchegoku/goddaka2.png" alt=""/>
+            <img id="gokugauchegoddaka3" src="perso/gauchegoku/goddaka3.png" alt=""/>
+            <img id="gokugauchegoddescend" src="perso/gauchegoku/goddescend.png" alt=""/>
+            <img id="gokugauchegodkamehameha" src="perso/gauchegoku/godkamehameha.png" alt=""/>
+            <img id="gokugauchegodkamehamehachargement" src="perso/gauchegoku/godkamehamehachargement.png" alt=""/>
+            <img id="gokugauchegodmonte" src="perso/gauchegoku/godmonte.png" alt=""/>
+            <img id="gokugauchegodpouvoir" src="perso/gauchegoku/godpouvoir.png" alt=""/>
+            <img id="gokugauchegodretour" src="perso/gauchegoku/godretour.png" alt=""/>
+            <img id="gokugauchegodtotondry1" src="perso/gauchegoku/godtotondry1.png" alt=""/>
+            <img id="gokugauchegodtotondry2" src="perso/gauchegoku/godtotondry2.png" alt=""/>
+            <img id="gokugauchegodtouchedmiddle" src="perso/gauchegoku/godtouchedmiddle.png" alt=""/>
+            <img id="gokugauchegodtouchedtop" src="perso/gauchegoku/godtouchedtop.png" alt=""/>
+            <img id="gokugauchegodtransformation" src="perso/gauchegoku/godtransformation.png" alt=""/>
+            <img id="gokugaucheinitialairkamehamehachargement" src="perso/gauchegoku/initialairkamehamehachargement.png" alt=""/>
+            <img id="gokugaucheinitialairpouvoir" src="perso/gauchegoku/initialairpouvoir.png" alt=""/>
+            <img id="gokugaucheinitialairtransformation" src="perso/gauchegoku/initialairtransformation.png" alt=""/>
+            <img id="gokugaucheinitialavance" src="perso/gauchegoku/initialavance.png" alt=""/>
+            <img id="gokugaucheinitialdaka1" src="perso/gauchegoku/initialdaka1.png" alt=""/>
+            <img id="gokugaucheinitialdaka2" src="perso/gauchegoku/initialdaka2.png" alt=""/>
+            <img id="gokugaucheinitialdaka3" src="perso/gauchegoku/initialdaka3.png" alt=""/>
+            <img id="gokugaucheinitialdescend" src="perso/gauchegoku/initialdescend.png" alt=""/>
+            <img id="gokugaucheinitialkamehameha" src="perso/gauchegoku/initialkamehameha.png" alt=""/>
+            <img id="gokugaucheinitialkamehamehachargement" src="perso/gauchegoku/initialkamehamehachargement.png" alt=""/>
+            <img id="gokugaucheinitialmonte" src="perso/gauchegoku/initialmonte.png" alt=""/>
+            <img id="gokugaucheinitialpouvoir" src="perso/gauchegoku/initialpouvoir.png" alt=""/>
+            <img id="gokugaucheinitialretour" src="perso/gauchegoku/initialretour.png" alt=""/>
+            <img id="gokugaucheinitialtotondry1" src="perso/gauchegoku/initialtotondry1.png" alt=""/>
+            <img id="gokugaucheinitialtotondry2" src="perso/gauchegoku/initialtotondry2.png" alt=""/>
+            <img id="gokugaucheinitialtouchedmiddle" src="perso/gauchegoku/initialtouchedmiddle.png" alt=""/>
+            <img id="gokugaucheinitialtouchedtop" src="perso/gauchegoku/initialtouchedtop.png" alt=""/>
+            <img id="gokugaucheinitialtransformation" src="perso/gauchegoku/initialtransformation.png" alt=""/>
+            <img id="gokudroiteinitial" src="perso/droitegoku/initial.png" alt=""/>
+            <img id="gokudroiteblue" src="perso/droitegoku/blue.png" alt=""/>
+            <img id="gokudroiteblueairkamehamehachargement" src="perso/droitegoku/blueairkamehamehachargement.png" alt=""/>
+            <img id="gokudroiteblueairpouvoir" src="perso/droitegoku/blueairpouvoir.png" alt=""/>
+            <img id="gokudroiteblueairtransformation" src="perso/droitegoku/blueairtransformation.png" alt=""/>
+            <img id="gokudroiteblueavance" src="perso/droitegoku/blueavance.png" alt=""/>
+            <img id="gokudroitebluedaka1" src="perso/droitegoku/bluedaka1.png" alt=""/>
+            <img id="gokudroitebluedaka2" src="perso/droitegoku/bluedaka2.png" alt=""/>
+            <img id="gokudroitebluedaka3" src="perso/droitegoku/bluedaka3.png" alt=""/>
+            <img id="gokudroitebluedescend" src="perso/droitegoku/bluedescend.png" alt=""/>
+            <img id="gokudroitebluekamehameha" src="perso/droitegoku/bluekamehameha.png" alt=""/>
+            <img id="gokudroitebluekamehamehachargement" src="perso/droitegoku/bluekamehamehachargement.png" alt=""/>
+            <img id="gokudroitebluemonte" src="perso/droitegoku/bluemonte.png" alt=""/>
+            <img id="gokudroitebluepouvoir" src="perso/droitegoku/bluepouvoir.png" alt=""/>
+            <img id="gokudroiteblueretour" src="perso/droitegoku/blueretour.png" alt=""/>
+            <img id="gokudroitebluetotondry1" src="perso/droitegoku/bluetotondry1.png" alt=""/>
+            <img id="gokudroitebluetotondry2" src="perso/droitegoku/bluetotondry2.png" alt=""/>
+            <img id="gokudroitebluetouchedmiddle" src="perso/droitegoku/bluetouchedmiddle.png" alt=""/>
+            <img id="gokudroitebluetouchedtop" src="perso/droitegoku/bluetouchedtop.png" alt=""/>
+            <img id="gokudroitebluetransformation" src="perso/droitegoku/bluetransformation.png" alt=""/>
+            <img id="gokudroitegod" src="perso/droitegoku/god.png" alt=""/>
+            <img id="gokudroitegodairkamehamehachargement" src="perso/droitegoku/godairkamehamehachargement.png" alt=""/>
+            <img id="gokudroitegodairpouvoir" src="perso/droitegoku/godairpouvoir.png" alt=""/>
+            <img id="gokudroitegodairtransformation" src="perso/droitegoku/godairtransformation.png" alt=""/>
+            <img id="gokudroitegodavance" src="perso/droitegoku/godavance.png" alt=""/>
+            <img id="gokudroitegoddaka1" src="perso/droitegoku/goddaka1.png" alt=""/>
+            <img id="gokudroitegoddaka2" src="perso/droitegoku/goddaka2.png" alt=""/>
+            <img id="gokudroitegoddaka3" src="perso/droitegoku/goddaka3.png" alt=""/>
+            <img id="gokudroitegoddescend" src="perso/droitegoku/goddescend.png" alt=""/>
+            <img id="gokudroitegodkamehameha" src="perso/droitegoku/godkamehameha.png" alt=""/>
+            <img id="gokudroitegodkamehamehachargement" src="perso/droitegoku/godkamehamehachargement.png" alt=""/>
+            <img id="gokudroitegodmonte" src="perso/droitegoku/godmonte.png" alt=""/>
+            <img id="gokudroitegodpouvoir" src="perso/droitegoku/godpouvoir.png" alt=""/>
+            <img id="gokudroitegodretour" src="perso/droitegoku/godretour.png" alt=""/>
+            <img id="gokudroitegodtotondry1" src="perso/droitegoku/godtotondry1.png" alt=""/>
+            <img id="gokudroitegodtotondry2" src="perso/droitegoku/godtotondry2.png" alt=""/>
+            <img id="gokudroitegodtouchedmiddle" src="perso/droitegoku/godtouchedmiddle.png" alt=""/>
+            <img id="gokudroitegodtouchedtop" src="perso/droitegoku/godtouchedtop.png" alt=""/>
+            <img id="gokudroitegodtransformation" src="perso/droitegoku/godtransformation.png" alt=""/>
+            <img id="gokudroiteinitialairkamehamehachargement" src="perso/droitegoku/initialairkamehamehachargement.png" alt=""/>
+            <img id="gokudroiteinitialairpouvoir" src="perso/droitegoku/initialairpouvoir.png" alt=""/>
+            <img id="gokudroiteinitialairtransformation" src="perso/droitegoku/initialairtransformation.png" alt=""/>
+            <img id="gokudroiteinitialavance" src="perso/droitegoku/initialavance.png" alt=""/>
+            <img id="gokudroiteinitialdaka1" src="perso/droitegoku/initialdaka1.png" alt=""/>
+            <img id="gokudroiteinitialdaka2" src="perso/droitegoku/initialdaka2.png" alt=""/>
+            <img id="gokudroiteinitialdaka3" src="perso/droitegoku/initialdaka3.png" alt=""/>
+            <img id="gokudroiteinitialdescend" src="perso/droitegoku/initialdescend.png" alt=""/>
+            <img id="gokudroiteinitialkamehameha" src="perso/droitegoku/initialkamehameha.png" alt=""/>
+            <img id="gokudroiteinitialkamehamehachargement" src="perso/droitegoku/initialkamehamehachargement.png" alt=""/>
+            <img id="gokudroiteinitialmonte" src="perso/droitegoku/initialmonte.png" alt=""/>
+            <img id="gokudroiteinitialpouvoir" src="perso/droitegoku/initialpouvoir.png" alt=""/>
+            <img id="gokudroiteinitialretour" src="perso/droitegoku/initialretour.png" alt=""/>
+            <img id="gokudroiteinitialtotondry1" src="perso/droitegoku/initialtotondry1.png" alt=""/>
+            <img id="gokudroiteinitialtotondry2" src="perso/droitegoku/initialtotondry2.png" alt=""/>
+            <img id="gokudroiteinitialtouchedmiddle" src="perso/droitegoku/initialtouchedmiddle.png" alt=""/>
+            <img id="gokudroiteinitialtouchedtop" src="perso/droitegoku/initialtouchedtop.png" alt=""/>
+            <img id="gokudroiteinitialtransformation" src="perso/droitegoku/initialtransformation.png" alt=""/>
+        </div>
+        <div id="jiren">
+            <img style="display: inline;" id="jirendroiteinitial" src="perso/droitejiren/initial.png" alt=""/>
+            <img id="jirendroiteinitialairpouvoir" src="perso/droitejiren/initialairpouvoir.png" alt=""/>
+            <img id="jirendroiteinitialmonte" src="perso/droitejiren/initialmonte.png" alt=""/>
+            <img id="jirendroiteinitialpouvoir" src="perso/droitejiren/initialpouvoir.png" alt=""/>
+            <img id="jirendroiteinitialretour" src="perso/droitejiren/initialretour.png" alt=""/>
+            <img id="jirendroiteinitialtotoncdry1" src="perso/droitejiren/initialtotondry1.png" alt=""/>
+            <img id="jirendroiteinitialtotoncdry2" src="perso/droitejiren/initialtotondry2.png" alt=""/>
+            <img id="jirendroiteinitialtouchedbehind" src="perso/droitejiren/initialtouchedbehind.png" alt=""/>
+            <img id="jirendroiteinitialtouchedmiddle" src="perso/droitejiren/initialtouchedmiddle.png" alt=""/>
+            <img id="jirendroiteinitialtouchedtop" src="perso/droitejiren/initialtouchedtop.png" alt=""/>
+            <img id="jirengaucheinitial" src="perso/gauchejiren/initial.png" alt=""/>
+            <img id="jirengaucheinitialairpouvoir" src="perso/gauchejiren/initialairpouvoir.png" alt=""/>
+            <img id="jirengaucheinitialmonte" src="perso/gauchejiren/initialmonte.png" alt=""/>
+            <img id="jirengaucheinitialpouvoir" src="perso/gauchejiren/initialpouvoir.png" alt=""/>
+            <img id="jirengaucheinitialretour" src="perso/gauchejiren/initialretour.png" alt=""/>
+            <img id="jirengaucheinitialtotoncdry1" src="perso/gauchejiren/initialtotondry1.png" alt=""/>
+            <img id="jirengaucheinitialtotoncdry2" src="perso/gauchejiren/initialtotondry2.png" alt=""/>
+            <img id="jirengaucheinitialtouchedbehind" src="perso/gauchejiren/initialtouchedbehind.png" alt=""/>
+            <img id="jirengaucheinitialtouchedmiddle" src="perso/gauchejiren/initialtouchedmiddle.png" alt=""/>
+            <img id="jirengaucheinitialtouchedtop" src="perso/gauchejiren/initialtouchedtop.png" alt=""/>
+        </div>
+        
         <img class="p" id="p1" src="pouvoir/pouvoir1gauche.png" alt="" style="animation: pouvoir1 1s;"/>
         <img class="p" id="p2" src="pouvoir/pouvoir2gauche.png" alt="" style="animation: pouvoir2 1s;"/>
         <img class="p" id="p3" src="pouvoir/pouvoir3gauche.png" alt="" style="animation: pouvoir3 1s;"/>
