--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <img id="gokugauchebluedescend" src="perso/gauchegoku/bluedescend.png" alt=""/>
             <img id="gokugauchebluekamehameha" src="perso/gauchegoku/bluekamehameha.png" alt=""/>
             <img id="gokugauchebluekamehamehachargement" src="perso/gauchegoku/bluekamehamehachargement.png" alt=""/>
-            <img id="gokugauchebluemonte" src="perso/gauchegoku/bluemonte.png" alt=""/>
+            <img id="gokugaucheblueair" src="perso/gauchegoku/blueair.png" alt=""/>
             <img id="gokugauchebluepouvoir" src="perso/gauchegoku/bluepouvoir.png" alt=""/>
             <img id="gokugaucheblueretour" src="perso/gauchegoku/blueretour.png" alt=""/>
             <img id="gokugauchebluetotondry1" src="perso/gauchegoku/bluetotondry1.png" alt=""/>
@@ -101,7 +101,7 @@
             <img id="gokugauchegoddescend" src="perso/gauchegoku/goddescend.png" alt=""/>
             <img id="gokugauchegodkamehameha" src="perso/gauchegoku/godkamehameha.png" alt=""/>
             <img id="gokugauchegodkamehamehachargement" src="perso/gauchegoku/godkamehamehachargement.png" alt=""/>
-            <img id="gokugauchegodmonte" src="perso/gauchegoku/godmonte.png" alt=""/>
+            <img id="gokugauchegodair" src="perso/gauchegoku/godair.png" alt=""/>
             <img id="gokugauchegodpouvoir" src="perso/gauchegoku/godpouvoir.png" alt=""/>
             <img id="gokugauchegodretour" src="perso/gauchegoku/godretour.png" alt=""/>
             <img id="gokugauchegodtotondry1" src="perso/gauchegoku/godtotondry1.png" alt=""/>
@@ -119,7 +119,7 @@
             <img id="gokugaucheinitialdescend" src="perso/gauchegoku/initialdescend.png" alt=""/>
             <img id="gokugaucheinitialkamehameha" src="perso/gauchegoku/initialkamehameha.png" alt=""/>
             <img id="gokugaucheinitialkamehamehachargement" src="perso/gauchegoku/initialkamehamehachargement.png" alt=""/>
-            <img id="gokugaucheinitialmonte" src="perso/gauchegoku/initialmonte.png" alt=""/>
+            <img id="gokugaucheinitialair" src="perso/gauchegoku/initialair.png" alt=""/>
             <img id="gokugaucheinitialpouvoir" src="perso/gauchegoku/initialpouvoir.png" alt=""/>
             <img id="gokugaucheinitialretour" src="perso/gauchegoku/initialretour.png" alt=""/>
             <img id="gokugaucheinitialtotondry1" src="perso/gauchegoku/initialtotondry1.png" alt=""/>
@@ -139,7 +139,7 @@
             <img id="gokudroitebluedescend" src="perso/droitegoku/bluedescend.png" alt=""/>
             <img id="gokudroitebluekamehameha" src="perso/droitegoku/bluekamehameha.png" alt=""/>
             <img id="gokudroitebluekamehamehachargement" src="perso/droitegoku/bluekamehamehachargement.png" alt=""/>
-            <img id="gokudroitebluemonte" src="perso/droitegoku/bluemonte.png" alt=""/>
+            <img id="gokudroiteblueair" src="perso/droitegoku/blueair.png" alt=""/>
             <img id="gokudroitebluepouvoir" src="perso/droitegoku/bluepouvoir.png" alt=""/>
             <img id="gokudroiteblueretour" src="perso/droitegoku/blueretour.png" alt=""/>
             <img id="gokudroitebluetotondry1" src="perso/droitegoku/bluetotondry1.png" alt=""/>
@@ -158,7 +158,7 @@
             <img id="gokudroitegoddescend" src="perso/droitegoku/goddescend.png" alt=""/>
             <img id="gokudroitegodkamehameha" src="perso/droitegoku/godkamehameha.png" alt=""/>
             <img id="gokudroitegodkamehamehachargement" src="perso/droitegoku/godkamehamehachargement.png" alt=""/>
-            <img id="gokudroitegodmonte" src="perso/droitegoku/godmonte.png" alt=""/>
+            <img id="gokudroitegodair" src="perso/droitegoku/godair.png" alt=""/>
             <img id="gokudroitegodpouvoir" src="perso/droitegoku/godpouvoir.png" alt=""/>
             <img id="gokudroitegodretour" src="perso/droitegoku/godretour.png" alt=""/>
             <img id="gokudroitegodtotondry1" src="perso/droitegoku/godtotondry1.png" alt=""/>
@@ -176,7 +176,7 @@
             <img id="gokudroiteinitialdescend" src="perso/droitegoku/initialdescend.png" alt=""/>
             <img id="gokudroiteinitialkamehameha" src="perso/droitegoku/initialkamehameha.png" alt=""/>
             <img id="gokudroiteinitialkamehamehachargement" src="perso/droitegoku/initialkamehamehachargement.png" alt=""/>
-            <img id="gokudroiteinitialmonte" src="perso/droitegoku/initialmonte.png" alt=""/>
+            <img id="gokudroiteinitialair" src="perso/droitegoku/initialair.png" alt=""/>
             <img id="gokudroiteinitialpouvoir" src="perso/droitegoku/initialpouvoir.png" alt=""/>
             <img id="gokudroiteinitialretour" src="perso/droitegoku/initialretour.png" alt=""/>
             <img id="gokudroiteinitialtotondry1" src="perso/droitegoku/initialtotondry1.png" alt=""/>
@@ -188,7 +188,7 @@
         <div id="jiren">
             <img style="display: inline;" id="jirendroiteinitial" src="perso/droitejiren/initial.png" alt=""/>
             <img id="jirendroiteinitialairpouvoir" src="perso/droitejiren/initialairpouvoir.png" alt=""/>
-            <img id="jirendroiteinitialmonte" src="perso/droitejiren/initialmonte.png" alt=""/>
+            <img id="jirendroiteinitialair" src="perso/droitejiren/initialair.png" alt=""/>
             <img id="jirendroiteinitialpouvoir" src="perso/droitejiren/initialpouvoir.png" alt=""/>
             <img id="jirendroiteinitialretour" src="perso/droitejiren/initialretour.png" alt=""/>
             <img id="jirendroiteinitialtotoncdry1" src="perso/droitejiren/initialtotondry1.png" alt=""/>
@@ -198,7 +198,7 @@
             <img id="jirendroiteinitialtouchedtop" src="perso/droitejiren/initialtouchedtop.png" alt=""/>
             <img id="jirengaucheinitial" src="perso/gauchejiren/initial.png" alt=""/>
             <img id="jirengaucheinitialairpouvoir" src="perso/gauchejiren/initialairpouvoir.png" alt=""/>
-            <img id="jirengaucheinitialmonte" src="perso/gauchejiren/initialmonte.png" alt=""/>
+            <img id="jirengaucheinitialair" src="perso/gauchejiren/initialair.png" alt=""/>
             <img id="jirengaucheinitialpouvoir" src="perso/gauchejiren/initialpouvoir.png" alt=""/>
             <img id="jirengaucheinitialretour" src="perso/gauchejiren/initialretour.png" alt=""/>
             <img id="jirengaucheinitialtotoncdry1" src="perso/gauchejiren/initialtotondry1.png" alt=""/>
