Update avatar while transformation

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <body>
         <p></p>
         <img id="avatargoku" src="avatar/initialgoku.png" alt=""/>
-        <img id="avatarjiren" src="avatar/jiren.png" alt=""/>
+        <img id="avatarjiren" src="avatar/initialjiren.png" alt=""/>
         <div id="barre_de_vie_goku">
             <div id="vie_restant_goku"></div>
         </div>
