--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <img id="gokugaucheblueairpouvoir" src="perso/gauchegoku/blueairpouvoir.png" alt=""/>
             <img id="gokugaucheblueairtransformation" src="perso/gauchegoku/blueairtransformation.png" alt=""/>
             <img id="gokugaucheblueavance" src="perso/gauchegoku/blueavance.png" alt=""/>
+            <img id="gokugaucheblueblock" src="perso/gauchegoku/blueblock.png" alt=""/>
             <img id="gokugauchebluedaka1" src="perso/gauchegoku/bluedaka1.png" alt=""/>
             <img id="gokugauchebluedaka2" src="perso/gauchegoku/bluedaka2.png" alt=""/>
             <img id="gokugauchebluedaka3" src="perso/gauchegoku/bluedaka3.png" alt=""/>
@@ -85,6 +86,7 @@
             <img id="gokugaucheblueair" src="perso/gauchegoku/blueair.png" alt=""/>
             <img id="gokugauchebluepouvoir" src="perso/gauchegoku/bluepouvoir.png" alt=""/>
             <img id="gokugaucheblueretour" src="perso/gauchegoku/blueretour.png" alt=""/>
+            <img id="gokugaucheblueteleportation" src="perso/gauchegoku/blueteleportation.png" alt=""/>
             <img id="gokugauchebluetotondry1" src="perso/gauchegoku/bluetotondry1.png" alt=""/>
             <img id="gokugauchebluetotondry2" src="perso/gauchegoku/bluetotondry2.png" alt=""/>
             <img id="gokugauchebluetouchedmiddle" src="perso/gauchegoku/bluetouchedmiddle.png" alt=""/>
@@ -95,6 +97,7 @@
             <img id="gokugauchegodairpouvoir" src="perso/gauchegoku/godairpouvoir.png" alt=""/>
             <img id="gokugauchegodairtransformation" src="perso/gauchegoku/godairtransformation.png" alt=""/>
             <img id="gokugauchegodavance" src="perso/gauchegoku/godavance.png" alt=""/>
+            <img id="gokugauchegodblock" src="perso/gauchegoku/godblock.png" alt=""/>
             <img id="gokugauchegoddaka1" src="perso/gauchegoku/goddaka1.png" alt=""/>
             <img id="gokugauchegoddaka2" src="perso/gauchegoku/goddaka2.png" alt=""/>
             <img id="gokugauchegoddaka3" src="perso/gauchegoku/goddaka3.png" alt=""/>
@@ -104,6 +107,7 @@
             <img id="gokugauchegodair" src="perso/gauchegoku/godair.png" alt=""/>
             <img id="gokugauchegodpouvoir" src="perso/gauchegoku/godpouvoir.png" alt=""/>
             <img id="gokugauchegodretour" src="perso/gauchegoku/godretour.png" alt=""/>
+            <img id="gokugauchegodteleportation" src="perso/gauchegoku/godteleportation.png" alt=""/>
             <img id="gokugauchegodtotondry1" src="perso/gauchegoku/godtotondry1.png" alt=""/>
             <img id="gokugauchegodtotondry2" src="perso/gauchegoku/godtotondry2.png" alt=""/>
             <img id="gokugauchegodtouchedmiddle" src="perso/gauchegoku/godtouchedmiddle.png" alt=""/>
@@ -113,6 +117,7 @@
             <img id="gokugaucheinitialairpouvoir" src="perso/gauchegoku/initialairpouvoir.png" alt=""/>
             <img id="gokugaucheinitialairtransformation" src="perso/gauchegoku/initialairtransformation.png" alt=""/>
             <img id="gokugaucheinitialavance" src="perso/gauchegoku/initialavance.png" alt=""/>
+            <img id="gokugaucheinitialblock" src="perso/gauchegoku/initialblock.png" alt=""/>
             <img id="gokugaucheinitialdaka1" src="perso/gauchegoku/initialdaka1.png" alt=""/>
             <img id="gokugaucheinitialdaka2" src="perso/gauchegoku/initialdaka2.png" alt=""/>
             <img id="gokugaucheinitialdaka3" src="perso/gauchegoku/initialdaka3.png" alt=""/>
@@ -122,6 +127,7 @@
             <img id="gokugaucheinitialair" src="perso/gauchegoku/initialair.png" alt=""/>
             <img id="gokugaucheinitialpouvoir" src="perso/gauchegoku/initialpouvoir.png" alt=""/>
             <img id="gokugaucheinitialretour" src="perso/gauchegoku/initialretour.png" alt=""/>
+            <img id="gokugaucheinitialteleportation" src="perso/gauchegoku/initialteleportation.png" alt=""/>
             <img id="gokugaucheinitialtotondry1" src="perso/gauchegoku/initialtotondry1.png" alt=""/>
             <img id="gokugaucheinitialtotondry2" src="perso/gauchegoku/initialtotondry2.png" alt=""/>
             <img id="gokugaucheinitialtouchedmiddle" src="perso/gauchegoku/initialtouchedmiddle.png" alt=""/>
@@ -133,6 +139,7 @@
             <img id="gokudroiteblueairpouvoir" src="perso/droitegoku/blueairpouvoir.png" alt=""/>
             <img id="gokudroiteblueairtransformation" src="perso/droitegoku/blueairtransformation.png" alt=""/>
             <img id="gokudroiteblueavance" src="perso/droitegoku/blueavance.png" alt=""/>
+            <img id="gokudroiteblueblock" src="perso/droitegoku/blueblock.png" alt=""/>
             <img id="gokudroitebluedaka1" src="perso/droitegoku/bluedaka1.png" alt=""/>
             <img id="gokudroitebluedaka2" src="perso/droitegoku/bluedaka2.png" alt=""/>
             <img id="gokudroitebluedaka3" src="perso/droitegoku/bluedaka3.png" alt=""/>
@@ -142,6 +149,7 @@
             <img id="gokudroiteblueair" src="perso/droitegoku/blueair.png" alt=""/>
             <img id="gokudroitebluepouvoir" src="perso/droitegoku/bluepouvoir.png" alt=""/>
             <img id="gokudroiteblueretour" src="perso/droitegoku/blueretour.png" alt=""/>
+            <img id="gokudroiteblueteleportation" src="perso/droitegoku/blueteleportation.png" alt=""/>
             <img id="gokudroitebluetotondry1" src="perso/droitegoku/bluetotondry1.png" alt=""/>
             <img id="gokudroitebluetotondry2" src="perso/droitegoku/bluetotondry2.png" alt=""/>
             <img id="gokudroitebluetouchedmiddle" src="perso/droitegoku/bluetouchedmiddle.png" alt=""/>
@@ -152,6 +160,7 @@
             <img id="gokudroitegodairpouvoir" src="perso/droitegoku/godairpouvoir.png" alt=""/>
             <img id="gokudroitegodairtransformation" src="perso/droitegoku/godairtransformation.png" alt=""/>
             <img id="gokudroitegodavance" src="perso/droitegoku/godavance.png" alt=""/>
+            <img id="gokudroitegodblock" src="perso/droitegoku/godblock.png" alt=""/>
             <img id="gokudroitegoddaka1" src="perso/droitegoku/goddaka1.png" alt=""/>
             <img id="gokudroitegoddaka2" src="perso/droitegoku/goddaka2.png" alt=""/>
             <img id="gokudroitegoddaka3" src="perso/droitegoku/goddaka3.png" alt=""/>
@@ -161,6 +170,7 @@
             <img id="gokudroitegodair" src="perso/droitegoku/godair.png" alt=""/>
             <img id="gokudroitegodpouvoir" src="perso/droitegoku/godpouvoir.png" alt=""/>
             <img id="gokudroitegodretour" src="perso/droitegoku/godretour.png" alt=""/>
+            <img id="gokudroitegodteleportation" src="perso/droitegoku/godteleportation.png" alt=""/>
             <img id="gokudroitegodtotondry1" src="perso/droitegoku/godtotondry1.png" alt=""/>
             <img id="gokudroitegodtotondry2" src="perso/droitegoku/godtotondry2.png" alt=""/>
             <img id="gokudroitegodtouchedmiddle" src="perso/droitegoku/godtouchedmiddle.png" alt=""/>
@@ -170,6 +180,7 @@
             <img id="gokudroiteinitialairpouvoir" src="perso/droitegoku/initialairpouvoir.png" alt=""/>
             <img id="gokudroiteinitialairtransformation" src="perso/droitegoku/initialairtransformation.png" alt=""/>
             <img id="gokudroiteinitialavance" src="perso/droitegoku/initialavance.png" alt=""/>
+            <img id="gokudroiteinitialblock" src="perso/droitegoku/initialblock.png" alt=""/>
             <img id="gokudroiteinitialdaka1" src="perso/droitegoku/initialdaka1.png" alt=""/>
             <img id="gokudroiteinitialdaka2" src="perso/droitegoku/initialdaka2.png" alt=""/>
             <img id="gokudroiteinitialdaka3" src="perso/droitegoku/initialdaka3.png" alt=""/>
@@ -179,6 +190,7 @@
             <img id="gokudroiteinitialair" src="perso/droitegoku/initialair.png" alt=""/>
             <img id="gokudroiteinitialpouvoir" src="perso/droitegoku/initialpouvoir.png" alt=""/>
             <img id="gokudroiteinitialretour" src="perso/droitegoku/initialretour.png" alt=""/>
+            <img id="gokudroiteinitialteleportation" src="perso/droitegoku/initialteleportation.png" alt=""/>
             <img id="gokudroiteinitialtotondry1" src="perso/droitegoku/initialtotondry1.png" alt=""/>
             <img id="gokudroiteinitialtotondry2" src="perso/droitegoku/initialtotondry2.png" alt=""/>
             <img id="gokudroiteinitialtouchedmiddle" src="perso/droitegoku/initialtouchedmiddle.png" alt=""/>
@@ -187,18 +199,17 @@
         </div>
         <div id="jiren">
             <img style="display: inline;" id="jirendroiteinitial" src="perso/droitejiren/initial.png" alt=""/>
-            <img id="jirendroiteinitialairpouvoir" src="perso/droitejiren/initialairpouvoir.png" alt=""/>
-            <img id="jirendroiteinitialair" src="perso/droitejiren/initialair.png" alt=""/>
-            <img id="jirendroiteinitialpouvoir" src="perso/droitejiren/initialpouvoir.png" alt=""/>
-            <img id="jirendroiteinitialretour" src="perso/droitejiren/initialretour.png" alt=""/>
-            <img id="jirendroiteinitialtotondry1" src="perso/droitejiren/initialtotondry1.png" alt=""/>
-            <img id="jirendroiteinitialtotondry2" src="perso/droitejiren/initialtotondry2.png" alt=""/>
-            <img id="jirendroiteinitialtouchedbehind" src="perso/droitejiren/initialtouchedbehind.png" alt=""/>
-            <img id="jirendroiteinitialtouchedmiddle" src="perso/droitejiren/initialtouchedmiddle.png" alt=""/>
-            <img id="jirendroiteinitialtouchedtop" src="perso/droitejiren/initialtouchedtop.png" alt=""/>
-            <img id="jirengaucheinitial" src="perso/gauchejiren/initial.png" alt=""/>
             <img id="jirengaucheinitialairpouvoir" src="perso/gauchejiren/initialairpouvoir.png" alt=""/>
+            <img id="jirengaucheinitialairtransformation" src="perso/gauchejiren/initialairtransformation.png" alt=""/>
             <img id="jirengaucheinitialair" src="perso/gauchejiren/initialair.png" alt=""/>
+            <img id="jirengaucheinitialavance" src="perso/gauchejiren/initialavance.png" alt=""/>
+            <img id="jirengaucheinitialblock" src="perso/gauchejiren/initialblock.png" alt=""/>
+            <img id="jirengaucheinitialbouclier" src="perso/gauchejiren/initialbouclier.png" alt=""/>
+            <img id="jirengaucheinitialdaka1" src="perso/gauchejiren/initialdaka1.png" alt=""/>
+            <img id="jirengaucheinitialdaka2" src="perso/gauchejiren/initialdaka2.png" alt=""/>
+            <img id="jirengaucheinitialdaka3" src="perso/gauchejiren/initialdaka3.png" alt=""/>
+            <img id="jirengaucheinitialdescend" src="perso/gauchejiren/initialdescend.png" alt=""/>
+            <img id="jirengaucheinitialmultiplepunch" src="perso/gauchejiren/initialmultiplepunch.png" alt=""/>
             <img id="jirengaucheinitialpouvoir" src="perso/gauchejiren/initialpouvoir.png" alt=""/>
             <img id="jirengaucheinitialretour" src="perso/gauchejiren/initialretour.png" alt=""/>
             <img id="jirengaucheinitialtotondry1" src="perso/gauchejiren/initialtotondry1.png" alt=""/>
@@ -206,6 +217,25 @@
             <img id="jirengaucheinitialtouchedbehind" src="perso/gauchejiren/initialtouchedbehind.png" alt=""/>
             <img id="jirengaucheinitialtouchedmiddle" src="perso/gauchejiren/initialtouchedmiddle.png" alt=""/>
             <img id="jirengaucheinitialtouchedtop" src="perso/gauchejiren/initialtouchedtop.png" alt=""/>
+            <img id="jirengaucheinitial" src="perso/gauchejiren/initial.png" alt=""/>
+            <img id="jirendroiteinitialairpouvoir" src="perso/droitejiren/initialairpouvoir.png" alt=""/>
+            <img id="jirendroiteinitialairtransformation" src="perso/droitejiren/initialairtransformation.png" alt=""/>
+            <img id="jirendroiteinitialair" src="perso/droitejiren/initialair.png" alt=""/>
+            <img id="jirendroiteinitialavance" src="perso/droitejiren/initialavance.png" alt=""/>
+            <img id="jirendroiteinitialblock" src="perso/droitejiren/initialblock.png" alt=""/>
+            <img id="jirendroiteinitialbouclier" src="perso/droitejiren/initialbouclier.png" alt=""/>
+            <img id="jirendroiteinitialdaka1" src="perso/droitejiren/initialdaka1.png" alt=""/>
+            <img id="jirendroiteinitialdaka2" src="perso/droitejiren/initialdaka2.png" alt=""/>
+            <img id="jirendroiteinitialdaka3" src="perso/droitejiren/initialdaka3.png" alt=""/>
+            <img id="jirendroiteinitialdescend" src="perso/droitejiren/initialdescend.png" alt=""/>
+            <img id="jirendroiteinitialmultiplepunch" src="perso/droitejiren/initialmultiplepunch.png" alt=""/>
+            <img id="jirendroiteinitialpouvoir" src="perso/droitejiren/initialpouvoir.png" alt=""/>
+            <img id="jirendroiteinitialretour" src="perso/droitejiren/initialretour.png" alt=""/>
+            <img id="jirendroiteinitialtotondry1" src="perso/droitejiren/initialtotondry1.png" alt=""/>
+            <img id="jirendroiteinitialtotondry2" src="perso/droitejiren/initialtotondry2.png" alt=""/>
+            <img id="jirendroiteinitialtouchedbehind" src="perso/droitejiren/initialtouchedbehind.png" alt=""/>
+            <img id="jirendroiteinitialtouchedmiddle" src="perso/droitejiren/initialtouchedmiddle.png" alt=""/>
+            <img id="jirendroiteinitialtouchedtop" src="perso/droitejiren/initialtouchedtop.png" alt=""/>
         </div>
         
         <img class="p" id="p1" src="pouvoir/pouvoir1gauche.png" alt="" style="animation: pouvoir1 1s;"/>
@@ -230,7 +260,18 @@
         <img class="p" id="pj10" src="pouvoir/pouvoirjiren10.png" alt="" style="animation: pouvoirjiren10 1s;"/>
         <img class="p" id="kamehamehaanim" src="pouvoir/kamehamehaanimation.png" alt=""/>
         <img class="p" id="kamehamehacharge" src="pouvoir/kamehamehachargement.png" alt=""/>
-        <img class="p" id="kamehameha" src="pouvoir/kamehamehagauche.png" alt=""/>
+        <img class="p" id="kamehamehagauche1" src="pouvoir/kamehamehagauche1.png" alt=""/>
+        <img class="p" id="kamehamehagauche2" src="pouvoir/kamehamehagauche2.png" alt=""/>
+        <img class="p" id="kamehamehagauche3" src="pouvoir/kamehamehagauche3.png" alt=""/>
+        <img class="p" id="kamehamehadroite1" src="pouvoir/kamehamehadroite1.png" alt=""/>
+        <img class="p" id="kamehamehadroite2" src="pouvoir/kamehamehadroite2.png" alt=""/>
+        <img class="p" id="kamehamehadroite3" src="pouvoir/kamehamehadroite3.png" alt=""/>
+        <img class="p" id="multiplepunchgauche1" src="pouvoir/multiplepunchgauche1.png" alt=""/>
+        <img class="p" id="multiplepunchgauche2" src="pouvoir/multiplepunchgauche2.png" alt=""/>
+        <img class="p" id="multiplepunchgauche3" src="pouvoir/multiplepunchgauche3.png" alt=""/>
+        <img class="p" id="multiplepunchdroite1" src="pouvoir/multiplepunchdroite1.png" alt=""/>
+        <img class="p" id="multiplepunchdroite2" src="pouvoir/multiplepunchdroite2.png" alt=""/>
+        <img class="p" id="multiplepunchdroite3" src="pouvoir/multiplepunchdroite3.png" alt=""/>
         <div id="tuto" style="display:block"></div>
         <div id="fin" style="display:none"></div>
         <div id="fight"></div>
